--- a/git-intro/questions/2.md
+++ b/git-intro/questions/2.md
@@ -1,5 +1,7 @@
-You see the error in your terminal: "error: failed to push some refs to" 
-Try and think of 1 reason why you might be seeing this error?
+When using Github desktop, somebody sees the following error: 
+"error: failed to push some refs to https://github.com/CodeYourFuture/HTML-CSS-Coursework-Week1" 
+
+Try and think of 1 reason why you might be seeing this error
 
 A: {YOUR ANSWER HERE}
 
