--- a/git-intro/questions/0.md
+++ b/git-intro/questions/0.md
@@ -1,6 +1,6 @@
 Q: What is the difference between a fork and cloned repository?
 
 A: {YOUR ANSWER HERE}
-
+Clone is when you copy someone's work to your local machine. Fork is when the work becomes your independant copy to make changes to.
 
 Remember to commit and push when you're finished!
