--- a/git-intro/questions/0.md
+++ b/git-intro/questions/0.md
@@ -1,6 +1,7 @@
 Q: What is the difference between a fork and cloned repository?
 
-A: {YOUR ANSWER HERE}
+A: Forking creates your own copy of a repository in a remote location
+  Cloning makes a local copy of a repository, not your own copy.
 
 
 Remember to commit and push when you're finished!
