--- a/git-intro/questions/1.md
+++ b/git-intro/questions/1.md
@@ -1,6 +1,6 @@
 Describe the purpose of a pull request.
 
 A: {YOUR ANSWER HERE}
-
+To review your work and ask permission to merge into the main branch. Let others know of the changes you've made to the code.
 
 Remember to commit and push when you're finished!
