--- a/git-intro/questions/0.md
+++ b/git-intro/questions/0.md
@@ -1,6 +1,6 @@
 Q: What is the difference between a fork and cloned repository?
 
-A: {YOUR ANSWER HERE}
+A: fork is a copy of repository on github and clone is copy on yours local computer.
 
 
 Remember to commit and push when you're finished!
