--- a/git-intro/questions/2.md
+++ b/git-intro/questions/2.md
@@ -1,9 +1,9 @@
-When using Github desktop, somebody sees the following error: 
-"error: failed to push some refs to https://github.com/CodeYourFuture/HTML-CSS-Coursework-Week1" 
+When using Github desktop, somebody sees the following error:
+"error: failed to push some refs to https://github.com/CodeYourFuture/HTML-CSS-Coursework-Week1"
 
 Try and think of 1 reason why you might be seeing this error
 
 A: {YOUR ANSWER HERE}
-
+If you have'nt saved there is nothing to change. Also when you have not selected the file you want to push.
 
 Remember to commit and push when you're finished!
