--- a/git-intro/questions/1.md
+++ b/git-intro/questions/1.md
@@ -1,6 +1,6 @@
 Describe the purpose of a pull request.
 
-A: {YOUR ANSWER HERE}
+A: Pull requests let you tell others about changes you've pushed to a branch in a repository on GitHub.
 
 
 Remember to commit and push when you're finished!
