--- a/git-intro/questions/3.md
+++ b/git-intro/questions/3.md
@@ -1,4 +1,4 @@
 Describe the difference between a commit and a push
-
+Commit is when you make a change to your repository/locak machine. Push is when you send your work to your github.
 
 {YOUR ANSWER HERE}
