--- a/git-intro/questions/0.md
+++ b/git-intro/questions/0.md
@@ -2,5 +2,5 @@ Q: What is the difference between a fork and cloned repository?
 
 A: {YOUR ANSWER HERE}
 
-
+Forking is when you save/copy someone's code is github which is online and cloning it is when you are saving it in your machine and can edit and work on it without internet.
 Remember to commit and push when you're finished!
