--- a/git-intro/questions/0.md
+++ b/git-intro/questions/0.md
@@ -2,5 +2,8 @@ Q: What is the difference between a fork and cloned repository?
 
 A: {YOUR ANSWER HERE}
 
+When you fork a repo from an github profile, the repo goes to be copied to your github profile, that means not your local computer
+
+Clone is in order to copy the repo to your local computer
 
 Remember to commit and push when you're finished!
