--- a/git-intro/questions/1.md
+++ b/git-intro/questions/1.md
@@ -1,6 +1,6 @@
 Describe the purpose of a pull request.
 
-A: {YOUR ANSWER HERE}
+A: PR is when we make a request to merge our changes to the main branch.
 
 
 Remember to commit and push when you're finished!
