--- a/git-intro/questions/2.md
+++ b/git-intro/questions/2.md
@@ -3,7 +3,7 @@ When using Github desktop, somebody sees the following error:
 
 Try and think of 1 reason why you might be seeing this error
 
-A: {YOUR ANSWER HERE}
+A: i think someone didnt push properly.
 
 
 Remember to commit and push when you're finished!
