--- a/git-intro/questions/1.md
+++ b/git-intro/questions/1.md
@@ -1,6 +1,6 @@
 Describe the purpose of a pull request.
 
 A: {YOUR ANSWER HERE}
-
+A pull request is a request to the main repo to merge your changes. 
 
 Remember to commit and push when you're finished!
