--- a/git-intro/questions/3.md
+++ b/git-intro/questions/3.md
@@ -1,4 +1,3 @@
 Describe the difference between a commit and a push
 
-
-{YOUR ANSWER HERE}
+-commit save locally computer and push is like make change in remote repository.
