Answers to questions 1 - 7

--- a/git-intro/questions/3.md
+++ b/git-intro/questions/3.md
@@ -1,4 +1,4 @@
 Describe the difference between a commit and a push
 
-
-{YOUR ANSWER HERE}
+{
+Commit - committing is the process which records changes in the repository. Think of it as a snapshot of the current status of the project. Commits are done locally. Push - pushing sends the recent commit history from your local repository up to GitHub.}
