--- a/git-intro/questions/4.md
+++ b/git-intro/questions/4.md
@@ -1,4 +1,9 @@
 When you clone a repository off Github, it is connected to a remote repository on Github.
 How can you check which remote repository your local repo is connected to on Github?
 
-Hint: Try researching to see if you can find a terminal command online 
+Hint: Try researching to see if you can find a terminal command online
+
+You can check which branch you are on using GitHub Desktop.
+{
+To check the configuration of the remote server, run the git remote command. The git remote command allows accessing the connection between remote and local. If you want to see the original existence of your cloned repository, use the git remote command.
+}
