--- a/git-intro/questions/5.md
+++ b/git-intro/questions/5.md
@@ -1,6 +1,14 @@
-Imagine you're speaking to a trainee who is starting at Code Your Future for the first time. 
+Imagine you're speaking to a trainee who is starting at Code Your Future for the first time.
 They ask the following question:
 
 "What is the difference between github.com and Github desktop?"
 
 How would you answer this question in order to help the new trainee?
+
+GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere.
+
+and GitHub Desktop
+
+GitHub Desktop is an application that enables you to interact with GitHub using a GUI instead of the command line or a web browser. GitHub Desktop encourages you and your team to collaborate using best practices with Git and GitHub.
+
+So, to sum it up, Git is a version control system that helps you manage your code and keep track of it, and GitHub is a cloud-based hosting platform that enables developers to manage their Git repositories. GitHub Desktop is an application that lets users interact better with GitHub through a GUI.
