--- a/git-intro/questions/6.md
+++ b/git-intro/questions/6.md
@@ -14,3 +14,11 @@ After running each command, describe what you think the commmand is doing ( it d
 4. git log
 
 You've seen the output for command 4. using other tools. Try and find some other places where you can see a similar output to the command for 4. Hint: Look on Github Desktop and github.com
+
+1. The ls command is used to list files. "ls" on its own lists all files in the current directory except for hidden files.
+
+2>
+
+3.The Bash command pwd is used to print the 'present working directory'. pwd is equivalent to executing cd on a DOS(Windows console host) terminal. This is the folder or path that the current Bash session resides in. The Bash command ls is used to 'list' contents of the current working directory.
+
+4.The git log command is Git's basic tool for exploring a repository's history. It's what you use when you need to find a specific version of a project or figure out what changes will be introduced by merging in a feature branch.
