--- a/git-intro/questions/0.md
+++ b/git-intro/questions/0.md
@@ -1,6 +1,8 @@
 Q: What is the difference between a fork and cloned repository?
 
-A: {YOUR ANSWER HERE}
+A: {Forking a repository is similar to copying a repository, with two major differences: You can use a pull request to suggest changes from your user-owned fork to the original repository in its GitHub instance, also known as the upstream repository.
 
+Cloning a repository means that you're downloading a copy of the source code from source control. To use the iOS SDK you have to download the code from GitHub (ie- clone the iOS SDK repository). from a shell / command prompt. Cloning basically means you want to get a local copy of the code present in the repository.
+}
 
 Remember to commit and push when you're finished!
