--- a/git-intro/questions/2.md
+++ b/git-intro/questions/2.md
@@ -1,9 +1,13 @@
-When using Github desktop, somebody sees the following error: 
-"error: failed to push some refs to https://github.com/CodeYourFuture/HTML-CSS-Coursework-Week1" 
+When using Github desktop, somebody sees the following error:
+"error: failed to push some refs to https://github.com/CodeYourFuture/HTML-CSS-Coursework-Week1"
 
 Try and think of 1 reason why you might be seeing this error
 
-A: {YOUR ANSWER HERE}
+A: {
+We can fix the error: failed to push some refs to [remote repo] error in Git using the git pull origin [branch] or git pull --rebase origin [branch] commands. In most cases, the latter fixes the error.
 
+Sometimes, Git can't make your change to a remote repository without losing commits. When this happens, your push is refused. If another person has pushed to the same branch as you, Git won't be able to push your changes: $ git push origin main > To https://github.com/USERNAME/REPOSITORY.git > !
+
+}
 
 Remember to commit and push when you're finished!
