--- a/git-intro/questions/4.md
+++ b/git-intro/questions/4.md
@@ -1,4 +1,6 @@
 When you clone a repository off Github, it is connected to a remote repository on Github.
 How can you check which remote repository your local repo is connected to on Github?
+- we should do git remote -v
+
 
 Hint: Try researching to see if you can find a terminal command online 
