--- a/git-intro/questions/5.md
+++ b/git-intro/questions/5.md
@@ -1,6 +1,7 @@
-Imagine you're speaking to a trainee who is starting at Code Your Future for the first time. 
+Imagine you're speaking to a trainee who is starting at Code Your Future for the first time.
 They ask the following question:
 
 "What is the difference between github.com and Github desktop?"
+Github.com is remote and Github desktop is local.
 
 How would you answer this question in order to help the new trainee?
