--- a/git-intro/questions/0.md
+++ b/git-intro/questions/0.md
@@ -6,4 +6,6 @@ When you fork a repo from an github profile, the repo goes to be copied to your 
 
 Clone is in order to copy the repo to your local computer
 
+I am asking to teammate
+
 Remember to commit and push when you're finished!
