--- a/git-intro/questions/3.md
+++ b/git-intro/questions/3.md
@@ -1,4 +1,4 @@
 Describe the difference between a commit and a push
 
 
-{YOUR ANSWER HERE}
+{YOUR ANSWER HERE} commit is when you record changs made to repository and push pushing sends the recent commit history from your local repository up to GitHub.
