--- a/git-intro/questions/5.md
+++ b/git-intro/questions/5.md
@@ -4,3 +4,8 @@ They ask the following question:
 "What is the difference between github.com and Github desktop?"
 
 How would you answer this question in order to help the new trainee?
+
+A. GitHub Desktop is an application that enables you to interact with GitHub using a GUI instead of the command line or a web browser. GitHub Desktop encourages you and your team to collaborate using best practices with Git and GitHub.
+
+
+A. GitHub is a cloud-based hosting platform that enables developers to manage their Git repositories. GitHub Desktop is an application that lets users interact better with GitHub through a GUI
