--- a/git-intro/questions/0.md
+++ b/git-intro/questions/0.md
@@ -1,6 +1,6 @@
 Q: What is the difference between a fork and cloned repository?
 
-A: {YOUR ANSWER HERE}
+A: {YOUR ANSWER HERE} Fork is copy and clone is like paste or to have duplicate copy where user can work on 
 
 
 Remember to commit and push when you're finished!
