--- a/git-intro/questions/4.md
+++ b/git-intro/questions/4.md
@@ -2,3 +2,5 @@ When you clone a repository off Github, it is connected to a remote repository o
 How can you check which remote repository your local repo is connected to on Github?
 
 Hint: Try researching to see if you can find a terminal command online 
+
+use CLI use git commit, git status, git get status, git push, 
