--- a/git-intro/questions/1.md
+++ b/git-intro/questions/1.md
@@ -1,6 +1,7 @@
 Describe the purpose of a pull request.
 
 A: {YOUR ANSWER HERE}
+To offer our changes to the owner of a repo and view it.
 
 
 Remember to commit and push when you're finished!
