--- a/git-intro/questions/5.md
+++ b/git-intro/questions/5.md
@@ -4,3 +4,4 @@ They ask the following question:
 "What is the difference between github.com and Github desktop?"
 
 How would you answer this question in order to help the new trainee?
+- github.com is a website and github desktop is a application.
