--- a/git-intro/questions/2.md
+++ b/git-intro/questions/2.md
@@ -4,6 +4,8 @@ When using Github desktop, somebody sees the following error:
 Try and think of 1 reason why you might be seeing this error
 
 A: {YOUR ANSWER HERE}
+We do not need the (").
+ 
 
 
 Remember to commit and push when you're finished!
