--- a/git-intro/questions/6.md
+++ b/git-intro/questions/6.md
@@ -6,11 +6,11 @@ In this exercise, you'll need to run each of the commands below in the terminal.
 After running each command, describe what you think the commmand is doing ( it doesn't matter if you have/haven't used the commands before )
 
 1. ls
-
+lists current directory content
 2. ls -a
-
+lists all files including hidden files
 3. pwd
-
+stands for present working directory
 4. git log
-
+shows the history of everything that's happened in the repository.
 You've seen the output for command 4. using other tools. Try and find some other places where you can see a similar output to the command for 4. Hint: Look on Github Desktop and github.com
