--- a/git-intro/questions/2.md
+++ b/git-intro/questions/2.md
@@ -1,9 +1,10 @@
-When using Github desktop, somebody sees the following error: 
-"error: failed to push some refs to https://github.com/CodeYourFuture/HTML-CSS-Coursework-Week1" 
+When using Github desktop, somebody sees the following error:
+"error: failed to push some refs to https://github.com/CodeYourFuture/HTML-CSS-Coursework-Week1"
 
 Try and think of 1 reason why you might be seeing this error
 
 A: {YOUR ANSWER HERE}
 
+- It could be a private repo and first we need to make a pull request .
 
 Remember to commit and push when you're finished!
