--- a/git-intro/questions/2.md
+++ b/git-intro/questions/2.md
@@ -8,6 +8,8 @@ We can fix the error: failed to push some refs to [remote repo] error in Git usi
 
 Sometimes, Git can't make your change to a remote repository without losing commits. When this happens, your push is refused. If another person has pushed to the same branch as you, Git won't be able to push your changes: $ git push origin main > To https://github.com/USERNAME/REPOSITORY.git > !
 
-}
+If you have not forked a repository then you will not have permission to make a pull request.
+
+Firstly you can clone a repository, push your commits and then make a pull request.}
 
 Remember to commit and push when you're finished!
