kristina and mine questions

--- a/git-intro/questions/0.md
+++ b/git-intro/questions/0.md
@@ -1,6 +1,6 @@
 Q: What is the difference between a fork and cloned repository?
 
-A: {YOUR ANSWER HERE}
+A: Fork is remote copy of repostory and clone is downlod the rpository in your hard disk
 
 
 Remember to commit and push when you're finished!
