--- a/git-intro/questions/1.md
+++ b/git-intro/questions/1.md
@@ -1,6 +1,6 @@
 Describe the purpose of a pull request.
 
-A: {YOUR ANSWER HERE}
+A: the porpuse of pull request is you requesting the target repository to please grab your changes .
 
 
 Remember to commit and push when you're finished!
