--- a/git-intro/questions/2.md
+++ b/git-intro/questions/2.md
@@ -3,7 +3,7 @@ When using Github desktop, somebody sees the following error:
 
 Try and think of 1 reason why you might be seeing this error
 
-A: {YOUR ANSWER HERE}
+A: That could happen when rwo people working on the same repo in the saame time. And after one of them making changes onother person dont have fetched  
 
 
 Remember to commit and push when you're finished!
