--- a/git-intro/questions/5.md
+++ b/git-intro/questions/5.md
@@ -4,3 +4,5 @@ They ask the following question:
 "What is the difference between github.com and Github desktop?"
 
 How would you answer this question in order to help the new trainee?
+
+ GitHub is a cloud-based hosting platform that enables developers to manage their Git repositories. GitHub Desktop is an application that lets users interact better with GitHub through a GUI.
