--- a/git-intro/questions/0.md
+++ b/git-intro/questions/0.md
@@ -1,6 +1,6 @@
 Q: What is the difference between a fork and cloned repository?
 
-A: {YOUR ANSWER HERE} Fork is copy and clone is like paste or to have duplicate copy where user can work on 
+A: {YOUR ANSWER HERE} A fork creates a completely independent copy of Git repository. Clone creates a linked copy that will continue to synchronize with the target repository.
 
 
 Remember to commit and push when you're finished!
