--- a/git-intro/questions/2.md
+++ b/git-intro/questions/2.md
@@ -3,7 +3,6 @@ When using Github desktop, somebody sees the following error:
 
 Try and think of 1 reason why you might be seeing this error
 
-A: {YOUR ANSWER HERE} means that no commit, oush or pull request done. 
-
+A: {YOUR ANSWER HERE} You dont have right to access. need to fork, clone and then work on it.
 
 Remember to commit and push when you're finished!
