--- a/git-intro/questions/0.md
+++ b/git-intro/questions/0.md
@@ -1,6 +1,6 @@
 Q: What is the difference between a fork and cloned repository?
 
 A: {YOUR ANSWER HERE}
-
+when you want to fork a profile you want to send changes to the owner and cloning is just having a copy in your local github
 
 Remember to commit and push when you're finished!
