--- a/git-intro/questions/1.md
+++ b/git-intro/questions/1.md
@@ -2,5 +2,6 @@ Describe the purpose of a pull request.
 
 A: {YOUR ANSWER HERE}
 
+a pull request is when you want to inform others about your changes when you push it the branch
 
 Remember to commit and push when you're finished!
