--- a/git-intro/questions/2.md
+++ b/git-intro/questions/2.md
@@ -5,5 +5,6 @@ Try and think of 1 reason why you might be seeing this error
 
 A: {YOUR ANSWER HERE}
 
+maybe you might be pushing changes to codeYourFuture
 
 Remember to commit and push when you're finished!
