--- a/git-intro/questions/2.md
+++ b/git-intro/questions/2.md
@@ -4,6 +4,6 @@ When using Github desktop, somebody sees the following error:
 Try and think of 1 reason why you might be seeing this error
 
 A: {YOUR ANSWER HERE}
-If you have'nt saved there is nothing to change. Also when you have not selected the file you want to push.
+If you have'nt saved there is nothing to change. Also when you have not selected the file you want to push. Merge conflict, google it. 
 
 Remember to commit and push when you're finished!
