--- a/git-intro/questions/4.md
+++ b/git-intro/questions/4.md
@@ -1,6 +1,6 @@
 When you clone a repository off Github, it is connected to a remote repository on Github.
 How can you check which remote repository your local repo is connected to on Github?
 
-You label your remote and local repository the same to be able to recognise it.
-
+Make sure to label your remote and local repository the same name in order to recognise it.
+git remote -v /command to check on terminal
 Hint: Try researching to see if you can find a terminal command online
