--- a/git-intro/questions/2.md
+++ b/git-intro/questions/2.md
@@ -4,7 +4,7 @@ When using Github desktop, somebody sees the following error:
 Try and think of 1 reason why you might be seeing this error
 
 A: {YOUR ANSWER HERE}
-We do not need the (").
+Mereging conflict
  
 
 
