--- a/git-intro/questions/0.md
+++ b/git-intro/questions/0.md
@@ -8,4 +8,13 @@ Clone is in order to copy the repo to your local computer
 
 I am asking to teammate
 
+that's my opnion 
+A fork and a cloned repository are two different things in the context of Git and version control.
+
+A fork is a copy of a repository that is hosted on a remote server (such as GitHub, GitLab, or Bitbucket). When you fork a repository, you create a new, independent repository based on the original one. You can then make changes to the forked repository and push those changes to your remote copy, without affecting the original repository.
+
+On the other hand, a clone is a local copy of a repository that you have cloned from a remote server. A clone includes all of the repository's files, as well as its entire history. You can make changes to a cloned repository and push those changes to a remote repository if you have write access. You can also create a new remote repository from a local clone, and push your changes there.
+
+In summary, a fork is a remote repository, while a clone is a local repository. Both allow you to work with the code from the original repository, but in different ways.
+
 Remember to commit and push when you're finished!
