--- a/git-intro/questions/3.md
+++ b/git-intro/questions/3.md
@@ -1,4 +1,4 @@
 Describe the difference between a commit and a push
-
+Commit is when you save changes to the github desktop and when you push it it goes to github .
 
 {YOUR ANSWER HERE}
