--- a/git-intro/questions/6.md
+++ b/git-intro/questions/6.md
@@ -5,12 +5,12 @@ In VSCode, [open your terminal](https://code.visualstudio.com/docs/terminal/basi
 In this exercise, you'll need to run each of the commands below in the terminal.
 After running each command, describe what you think the commmand is doing ( it doesn't matter if you have/haven't used the commands before )
 
-1. ls
+1. ls -- list files in this location
 
-2. ls -a
+2. ls -a --it will display a list of all files and directories in the current directory, including hidden ones.
 
-3. pwd
+3. pwd -- print work directory
 
-4. git log
+4. git log -- shows a list of all the commits made to a repository
 
 You've seen the output for command 4. using other tools. Try and find some other places where you can see a similar output to the command for 4. Hint: Look on Github Desktop and github.com
