--- a/questions-js1/0.md
+++ b/questions-js1/0.md
@@ -2,5 +2,5 @@ Q: What is a javascript REPL? Can you name two ways to open one?
 
 A: {YOUR ANSWER HERE}
 
-
+REPL stands for read evaluation print loop and it does what it says it reads the code you write in the terminal ,evaluate it print it and use single expressions as user input and returns the result back to the console after execution.It's a simple way to test code .
 Remember to commit and push when you're finished!
