--- a/questions-js1/0.md
+++ b/questions-js1/0.md
@@ -1,6 +1,6 @@
 Q: What is a javascript REPL? Can you name two ways to open one?
 
 A: {YOUR ANSWER HERE}
-
-
+Read-Eval-Print-Loop. A command-line tool used for processing Node.js expressions
+Enter node in your comand line shell: $ node. Open developer tools and type in the console
 Remember to commit and push when you're finished!
