--- a/questions-js1/1.md
+++ b/questions-js1/1.md
@@ -1,6 +1,6 @@
 Q: How do you write "Hello World" to the console?
+console.log("Hello World");
 
 A: {YOUR ANSWER HERE}
-
 
 Remember to commit and push when you're finished!
