--- a/questions-js1/3.md
+++ b/questions-js1/3.md
@@ -1,6 +1,6 @@
 Q: What is the difference between `let` and `const`?
+let is a keyword that usually used to define a variable in Javascript and this variable can take different values. Whereas, const is a keyword that usually used to define a constant variable in JS that has the same value all the time.
 
 A: {YOUR ANSWER HERE}
-
 
 Remember to commit and push when you're finished!
