--- a/questions-js1/4.md
+++ b/questions-js1/4.md
@@ -1,6 +1,8 @@
 Q: What is the difference between defining and calling a function??
 
 A: {YOUR ANSWER HERE}
+Calling a function is writing the name followed by ()
+defining the function doesn't run the code it just defines the name
 
 
 Remember to commit and push when you're finished!
