--- a/questions-js1/0.md
+++ b/questions-js1/0.md
@@ -1,6 +1,6 @@
 Q: What is a javascript REPL? Can you name two ways to open one?
 
-A: {YOUR ANSWER HERE}
+A: {js Read-Eval-Print-Loop (REPL) is an interactive shell that processes Node. js expressions.Type Node in Terminal }
 
 
 Remember to commit and push when you're finished!
