--- a/questions-js1/4.md
+++ b/questions-js1/4.md
@@ -1,6 +1,6 @@
 Q: What is the difference between defining and calling a function??
 
 A: {YOUR ANSWER HERE}
-
+The difference between defining and calling a function is that when you call a function you just write the name of the function with () and code will run. Defining the function does not run the code, it's just defines the name.
 
 Remember to commit and push when you're finished!
