--- a/questions-js1/0.md
+++ b/questions-js1/0.md
@@ -1,6 +1,6 @@
 Q: What is a javascript REPL? Can you name two ways to open one?
 
-A: {YOUR ANSWER HERE}
+A: REPL is read-eval-print loop, which is a computer environment where user inputs are read and evaluated, and then the results are returned to the user.
 
 
 Remember to commit and push when you're finished!
