update to hello world
changed from the last week

--- a/questions-js1/1.md
+++ b/questions-js1/1.md
@@ -1,5 +1,5 @@
 Q: How do you write "Hello World" to the console?
 
-A: {console.log("Hello World")}
+A: {console.log("Hello World!")}
 
 Remember to commit and push when you're finished!
