--- a/questions-js1/1.md
+++ b/questions-js1/1.md
@@ -1,6 +1,7 @@
 Q: How do you write "Hello World" to the console?
 
-A: {YOUR ANSWER HERE}
+A: console.log ("Hello world")
+
 
 
 Remember to commit and push when you're finished!
