answered the questions

--- a/questions-js1/5.md
+++ b/questions-js1/5.md
@@ -2,5 +2,14 @@ Q: What is the difference between an expression and a statement?
 
 A: {YOUR ANSWER HERE}
 
+An expression is any word or group of words or symbols that is a value. In programming, an expression is a value, or anything that executes and ends up being a value.
+
+Example:
+const price = 500;
+
+A statement is a group of expressions and/or statements that you design to carry out a task or an action.
+
+Statements are two-sided – that is, they either do tasks or don't do them. Any statement that can return a value is automatically qualified to be used as an expression. That is why a function or class is a statement and also an expression in JavaScript.
+let amount = $2000;
 
 Remember to commit and push when you're finished!
