--- a/questions-js1/1.md
+++ b/questions-js1/1.md
@@ -2,5 +2,6 @@ Q: How do you write "Hello World" to the console?
 
 A: {YOUR ANSWER HERE}
 
+console.log("hello world");
 
 Remember to commit and push when you're finished!
