--- a/questions-js1/5.md
+++ b/questions-js1/5.md
@@ -1,6 +1,7 @@
 Q: What is the difference between an expression and a statement?
 
 A: {YOUR ANSWER HERE}
-
+Statement is standalone unit of excution that doesn't return anything and usually used for decleration.
+Expression is a combination of values and functions that interpreted by the complier to a create new value.
 
 Remember to commit and push when you're finished!
