adding answer to 1/0

--- a/questions-js1/0.md
+++ b/questions-js1/0.md
@@ -1,6 +1,6 @@
 Q: What is a javascript REPL? Can you name two ways to open one?
 
 A: {YOUR ANSWER HERE}
-
+You can write the code on node without using vs code. 
 
 Remember to commit and push when you're finished!
