--- a/questions-js1/0.md
+++ b/questions-js1/0.md
@@ -1,6 +1,12 @@
 Q: What is a javascript REPL? Can you name two ways to open one?
 
-A: {YOUR ANSWER HERE}
+A: {A JavaScript REPL (Read-Evaluate-Print-Loop) is an interactive programming environment that allows you to enter and execute JavaScript code snippets, one line at a time, and immediately see the results. In a REPL, you can test out code, experiment with new features, and debug issues quickly.
+
+Here are two ways to open a JavaScript REPL:
+
+Using the Node.js command-line interface: If you have Node.js installed on your computer, you can open a JavaScript REPL by typing "node" in your command prompt or terminal and hitting Enter. This will launch the Node.js REPL, where you can enter and execute JavaScript commands.
+
+Using the developer console in a web browser: Most modern web browsers include a built-in developer console that can be used as a JavaScript REPL. To open the console, you can typically press the F12 key on your keyboard or right-click on a web page and select "Inspect" or "Inspect Element". Once the developer console is open, you can switch to the "Console" tab and start entering JavaScript commands.}
 
 
 Remember to commit and push when you're finished!
