--- a/questions-js1/2.md
+++ b/questions-js1/2.md
@@ -3,7 +3,7 @@ Q: Without running the actual code, what do you think this program does?
 console.log(2 * 4 + 10 / 5);
 ```
 
-A: {YOUR ANSWER HERE}
+A: {It prints result of a piece of math operation. 2 times 4 plus 10 divide 5 = 10}
 
 
 Remember to commit and push when you're finished!
