--- a/questions-js1/4.md
+++ b/questions-js1/4.md
@@ -1,6 +1,9 @@
 Q: What is the difference between defining and calling a function??
 
-A: {YOUR ANSWER HERE}
+A: {Defining a function means creating the function and giving it a name and a set of instructions that it will execute when it is      called.
+
+    Calling a function means invoking the function by using its name followed by parentheses, and passing any required arguments in the parentheses. When a function is called, it will execute the instructions defined in its body and may return a value.
+}
 
 
 Remember to commit and push when you're finished!
