--- a/questions-js1/3.md
+++ b/questions-js1/3.md
@@ -1,6 +1,7 @@
 Q: What is the difference between `let` and `const`?
 
 A: {YOUR ANSWER HERE}
-
+'let' It can only be updated and can't be re-declared.
+'const' It can't be updated or re-declared.
 
 Remember to commit and push when you're finished!
