--- a/questions-js1/2.md
+++ b/questions-js1/2.md
@@ -1,9 +1,10 @@
 Q: Without running the actual code, what do you think this program does?
+
 ```
 console.log(2 * 4 + 10 / 5);
 ```
 
 A: {YOUR ANSWER HERE}
-
+The console.log will print the answer.
 
 Remember to commit and push when you're finished!
