--- a/questions-js1/4.md
+++ b/questions-js1/4.md
@@ -1,6 +1,6 @@
 Q: What is the difference between defining and calling a function??
 
 A: {YOUR ANSWER HERE}
-
+When you “call” a function, you just write the name of the function followed by (). This will actually run the code inside that function. Defining the function does not run the code. It just defines the name.
 
 Remember to commit and push when you're finished!
