--- a/questions-js1/6.md
+++ b/questions-js1/6.md
@@ -23,4 +23,4 @@ b) What will `result2` evaluate to? Explain your answer
 c) Try to summarise the main difference between `logSum` and `calculateSum`
 
 
-{YOUR ANSWERS HERE}
+{YOUR ANSWERS HERE} a) 42, as the calculate sum function is a + b which gives 42 and has return a + b. b) 42, Undefined. As there's no return it shows the answer but doesn't log it to the console. 
