--- a/questions-js1/6.md
+++ b/questions-js1/6.md
@@ -23,4 +23,6 @@ b) What will `result2` evaluate to? Explain your answer
 c) Try to summarise the main difference between `logSum` and `calculateSum`
 
 
-{YOUR ANSWERS HERE}
+{ a. result1 = 42 calculateSum function returns the result
+  b. result2 = 42 logSum function prints the result on terminal
+}
