--- a/questions-js1/7.md
+++ b/questions-js1/7.md
@@ -6,5 +6,6 @@ Ctr + Shift + V (Windows/Linux) or CMD + Shift + V (Mac)
 In this task, you'll need to look at some code in `7.js` and, firstly, predict what it will do, **without executing it**.
 
 {YOUR PREDICTION HERE}
+it's going to return error. because we just defined the variable currentYear and not the function currentYear().
 
 Afterwards, you can execute the code in `7.js` to check your answer 📝
