--- a/questions-js1/5.md
+++ b/questions-js1/5.md
@@ -1,6 +1,6 @@
 Q: What is the difference between an expression and a statement?
 
 A: {YOUR ANSWER HERE}
-
+Expressions produce a value, and that value will be passed into the function. Statements don't produce a value.
 
 Remember to commit and push when you're finished!
