answered question 3- afsha

--- a/questions-js1/3.md
+++ b/questions-js1/3.md
@@ -1,6 +1,6 @@
 Q: What is the difference between `let` and `const`?
 
-A: {YOUR ANSWER HERE}
+A: In JavaScript, let and const are used to declare variables. The main difference between them is that variables declared with let can be reassigned, while variables declared with const cannot be reassigned.
 
 
 Remember to commit and push when you're finished!
