--- a/questions-js1/3.md
+++ b/questions-js1/3.md
@@ -1,6 +1,6 @@
 Q: What is the difference between `let` and `const`?
 
-A: {YOUR ANSWER HERE}
+A: `const` is a signal that the identifier won't be reassigned. `let` is a signal that the variable may be reassigned, such as a counter in a loop, or a value swap in an algorithm. It also signals that the variable will be used only in the block it's defined in, which is not always the entire containing function.
 
 
 Remember to commit and push when you're finished!
