--- a/questions-js1/2.md
+++ b/questions-js1/2.md
@@ -5,6 +5,6 @@ console.log(2 * 4 + 10 / 5);
 ```
 
 A: {YOUR ANSWER HERE}
-The console.log will print the answer.
+The console.log will print the answer. 10
 
 Remember to commit and push when you're finished!
