--- a/questions-js1/0.md
+++ b/questions-js1/0.md
@@ -1,6 +1,10 @@
 Q: What is a javascript REPL? Can you name two ways to open one?
 
 A: {YOUR ANSWER HERE}
-Typing node in the terminal.
+The Node.js Read-Eval-Print-Loop (REPL) is an interactive shell that processes Node.js expressions. The shell reads JavaScript code the user enters, evaluates the result of interpreting the line of code, prints the result to the user, and loops until the user signals to quit.
+
+The REPL is bundled with every Node.js installation and allows you to quickly test and explore JavaScript code within the Node environment without having to store it in a file.
+
+Enter node in your terminal like this $ node
 
 Remember to commit and push when you're finished!
