--- a/questions-js1/5.md
+++ b/questions-js1/5.md
@@ -1,6 +1,6 @@
 Q: What is the difference between an expression and a statement?
 
-A: {YOUR ANSWER HERE}
+A: The Main Differences Between an Expression and a Statement in Programming. Expressions can be assigned or used as operands, while statements can only be declared. Statements create side effects to be useful, while expressions are values or execute to values.
 
 
 Remember to commit and push when you're finished!
