--- a/questions-js1/3.md
+++ b/questions-js1/3.md
@@ -2,5 +2,7 @@ Q: What is the difference between `let` and `const`?
 
 A: {YOUR ANSWER HERE}
 
+let is chanchable but const is like a rule not changeble.
+
 
 Remember to commit and push when you're finished!
