--- a/questions-js1/2.md
+++ b/questions-js1/2.md
@@ -5,7 +5,6 @@ console.log(2 * 4 + 10 / 5);
 ```
 
 A: {YOUR ANSWER HERE}
-
-10
+It shows the sum of the equation which is 10.
 
 Remember to commit and push when you're finished!
