--- a/questions-js1/0.md
+++ b/questions-js1/0.md
@@ -1,6 +1,8 @@
 Q: What is a javascript REPL? Can you name two ways to open one?
 
-A: {YOUR ANSWER HERE}
+A: {YOUR ANSWER HERE} REPL is an easy-to-use command-line tool, used for processing Node. js expressions and evaluates the result of this code.
+
+one way is to press F5/F12 OR $ node
 
 
 Remember to commit and push when you're finished!
