--- a/questions-js1/3.md
+++ b/questions-js1/3.md
@@ -1,6 +1,6 @@
 Q: What is the difference between `let` and `const`?
 
-A: {YOUR ANSWER HERE}
+A: {YOUR ANSWER HERE} let is where value can be changed wheres as in const value don't change.  for example const is a signal that the identifier won't be reassigned. let is a signal that the variable may be reassigned,
 
 
 Remember to commit and push when you're finished!
