--- a/questions-js1/4.md
+++ b/questions-js1/4.md
@@ -1,6 +1,6 @@
 Q: What is the difference between defining and calling a function??
 
-A: {YOUR ANSWER HERE}
+A: {YOUR ANSWER HERE} defining is where we define the function and calling function is when we run code for that function.
 
 
 Remember to commit and push when you're finished!
