--- a/questions-js1/6.md
+++ b/questions-js1/6.md
@@ -19,8 +19,18 @@ const result2 = logSum(10, 32);
 ```
 
 a) what will `result1` evaluate to? Explain your answer
+
 b) What will `result2` evaluate to? Explain your answer
+
+
 c) Try to summarise the main difference between `logSum` and `calculateSum`
 
 
+
 {YOUR ANSWERS HERE}
+
+a) answer: its 42 because a = 10 and b = 32 so in function calculate sum we are adding a+b which is 10+32 = 42.
+
+b) answer: this will log number 1032 becaue its not calculating its loging value.
+
+c) answer: 
