--- a/questions-js1/7.md
+++ b/questions-js1/7.md
@@ -8,3 +8,4 @@ In this task, you'll need to look at some code in `7.js` and, firstly, predict w
 {YOUR PREDICTION HERE}
 
 Afterwards, you can execute the code in `7.js` to check your answer 📝
+this will not execute the programe because its not defined.
