--- a/questions-js1/5.md
+++ b/questions-js1/5.md
@@ -2,5 +2,7 @@ Q: What is the difference between an expression and a statement?
 
 A: {YOUR ANSWER HERE}
 
+expression is a piece of a statement.
+
 
 Remember to commit and push when you're finished!
