--- a/questions-js1/3.md
+++ b/questions-js1/3.md
@@ -2,5 +2,9 @@ Q: What is the difference between `let` and `const`?
 
 A: {YOUR ANSWER HERE}
 
+let is changeable
+
+const isnt
+
 
 Remember to commit and push when you're finished!
