--- a/questions-js1/4.md
+++ b/questions-js1/4.md
@@ -2,5 +2,16 @@ Q: What is the difference between defining and calling a function??
 
 A: {YOUR ANSWER HERE}
 
+defining a function returns something 
+
+function app(){
+    return something
+}
+
+calling a fucntion is applying the function that return whats in  the function
+
+app();
+
+
 
 Remember to commit and push when you're finished!
