--- a/questions-js1/6.md
+++ b/questions-js1/6.md
@@ -14,13 +14,18 @@ function logSum(a, b) {
   console.log(a + b);
 }
 
-const result1 = calculateSum(10, 32);
-const result2 = logSum(10, 32);
+const result1 = calculateSum(10, 32); 42
+const result2 = logSum(10, 32); 42
 ```
 
-a) what will `result1` evaluate to? Explain your answer
-b) What will `result2` evaluate to? Explain your answer
+a) what will `result1` evaluate to? Explain your answer it return 42
+b) What will `result2` evaluate to? Explain your answer it console.log 42
 c) Try to summarise the main difference between `logSum` and `calculateSum`
 
+  they give you the same output
+
+ console.log the developer will get to see
+
+  logsum is return the value;
 
 {YOUR ANSWERS HERE}
