--- a/questions-js1/0.md
+++ b/questions-js1/0.md
@@ -2,5 +2,6 @@ Q: What is a javascript REPL? Can you name two ways to open one?
 
 A: {YOUR ANSWER HERE}
 
+js Read-Eval-Print-Loop (REPL) is an easy-to-use command-line tool, used for processing Node. js expressions.
 
 Remember to commit and push when you're finished!
