--- a/questions-js1/5.md
+++ b/questions-js1/5.md
@@ -2,5 +2,7 @@ Q: What is the difference between an expression and a statement?
 
 A: {YOUR ANSWER HERE}
 
+expression is the building block using such things like while or if statements, and the statements are the stucture
+
 
 Remember to commit and push when you're finished!
