--- a/questions-js1/6.md
+++ b/questions-js1/6.md
@@ -18,9 +18,16 @@ const result1 = calculateSum(10, 32);
 const result2 = logSum(10, 32);
 ```
 
-a) what will `result1` evaluate to? Explain your answer
-b) What will `result2` evaluate to? Explain your answer
+a) what will `result1` evaluate to? Explain your answer it returns 42
+b) What will `result2` evaluate to? Explain your answer it console.log 42
 c) Try to summarise the main difference between `logSum` and `calculateSum`
+
+
+calculateSum is for the devlepor to see.
+
+logsum is returning the value.
+
+
 
 
 {YOUR ANSWERS HERE}
