--- a/questions-js1/5.md
+++ b/questions-js1/5.md
@@ -1,6 +1,5 @@
 Q: What is the difference between an expression and a statement?
 
-A: {YOUR ANSWER HERE}
-
+A: Statements are the whole structure, while expressions are the building blocks. For example, a line or a block of code is a statement.
 
 Remember to commit and push when you're finished!
