answered question 5-afsha

--- a/questions-js1/5.md
+++ b/questions-js1/5.md
@@ -1,6 +1,8 @@
 Q: What is the difference between an expression and a statement?
 
-A: {YOUR ANSWER HERE}
+A: Expressions are unique in meaning, while statements are two-sided in execution. For example, 1 has a certain value while go( ) may be executed or not.
+
+Statements are the whole structure, while expressions are the building blocks. For example, a line or a block of code is a statement
 
 
 Remember to commit and push when you're finished!
