--- a/git-intro/questions/0.md
+++ b/git-intro/questions/0.md
@@ -1,6 +1,6 @@
 Q: What is the difference between a fork and cloned repository?
 
-A: {Fork is making a branch in our github but Clone is saving it on our desktop} hi
+A: {Fork is making a branch in our github but Clone is saving it on our desktop} hi bye
 
 
 Remember to commit and push when you're finished!
