--- a/js1-week-2/0.md
+++ b/js1-week-2/0.md
@@ -1,7 +1,7 @@
 # Code comprehension
 
 Remember to **preview a markdown file** on your computer you can do:
-Ctr + Shift + V (Windows/Linux) or CMD + Shift + V (Mac)
+Ctrl + Shift + V (Windows/Linux) or CMD + Shift + V (Mac)
 
 Consider the code in this program below:
 
