--- a/js1-week-2/0.md
+++ b/js1-week-2/0.md
@@ -18,11 +18,16 @@ const result1 = calculateSum(10, 32);
 const result2 = logSum(10, 32);
 ```
 
-a) what will `result1` evaluate to? Explain your answer
+a) what will `result1` evaluate to? Explain your answer  
+
 
 b) What will `result2` evaluate to? Explain your answer
+
 
 c) Try to summarise the main difference between `logSum` and `calculateSum`
 
 
 {YOUR ANSWERS HERE}
+a) The result1 = 42 
+b) the result2 will be 42 printed in the terminal 
+c) logSum function will print the number in the terminal and doesn't return anything. Whereas `calculateSum` will return the number as a result. 
