--- a/js1-week-2/1.md
+++ b/js1-week-2/1.md
@@ -7,4 +7,6 @@ In this task, you'll need to look at some code in `1.js` and, firstly, predict w
 
 {YOUR PREDICTION HERE}
 
+It will give a mistake saying that currentYear() is not a function.
+
 Afterwards, you can execute the code in `1.js` to check your answer 📝
