Mandy's prediction for Q1
Prediction added

--- a/js1-week-2/1.md
+++ b/js1-week-2/1.md
@@ -6,5 +6,7 @@ Ctr + Shift + V (Windows/Linux) or CMD + Shift + V (Mac)
 In this task, you'll need to look at some code in `1.js` and, firstly, predict what it will do, **without executing it**.
 
 {YOUR PREDICTION HERE}
-
+A Constant (that doesn't change value) being set to 2023
+A function being called - that's not been defined
+Error should occur (undefined function)
 Afterwards, you can execute the code in `1.js` to check your answer 📝
