--- a/js1-week-2/0.md
+++ b/js1-week-2/0.md
@@ -26,3 +26,6 @@ c) Try to summarise the main difference between `logSum` and `calculateSum`
 
 
 {YOUR ANSWERS HERE}
+
+a) `result1` will evaluate to (42) but the first function will not print anything .
+b) `result2` will evaluate to (42) and the second function will print the result out.
