--- a/js1-week-2/1.md
+++ b/js1-week-2/1.md
@@ -6,5 +6,5 @@ Ctr + Shift + V (Windows/Linux) or CMD + Shift + V (Mac)
 In this task, you'll need to look at some code in `1.js` and, firstly, predict what it will do, **without executing it**.
 
 {YOUR PREDICTION HERE}
-
+It doesn't return or print anything. 
 Afterwards, you can execute the code in `1.js` to check your answer 📝
