--- a/js1-week-2/3.md
+++ b/js1-week-2/3.md
@@ -1,4 +1,4 @@
 Describe the difference between a commit and a push
 
-
+Commit saves the changes locally and Push saves the changes in main branch.
 {YOUR ANSWER HERE}
