Added Malkit's answers to Q0
Went back to Q0 as we didn't see this.

--- a/js1-week-2/0.md
+++ b/js1-week-2/0.md
@@ -19,10 +19,13 @@ const result2 = logSum(10, 32);
 ```
 
 a) what will `result1` evaluate to? Explain your answer
+result1 will add a and b together and return the answer as part of the function call.
 
 b) What will `result2` evaluate to? Explain your answer
+result2 will output the sum of a and b to the console rather than return.
 
 c) Try to summarise the main difference between `logSum` and `calculateSum`
-
+calculateSUm will return a value as part of the function call.
+logSum returns nothing but will output the summed value to the console.
 
 {YOUR ANSWERS HERE}
