--- a/js1-week-2/2.md
+++ b/js1-week-2/2.md
@@ -10,7 +10,10 @@ If some parts of the code are unfamiliar, then look them up on MDN.
 Write your prediction below:
 
 {YOUR PREDICTION HERE}
+It will print 9 lines of stars starting from 1 star on line 1 to 9 stars at line 9
 
 Once you've written your prediction, then commit your work. Now actually run `2.js` using node and write your answer below:
 
+
 {ACTUAL OBSERVED BEHAVIOUR}
+It will print 10 lines of stars starting from 1 star on line 1 to 10 stars at line 10
