--- a/js1-week-2/5.md
+++ b/js1-week-2/5.md
@@ -9,5 +9,5 @@ a) Describe, in your own words, what the above assertion checks.
 
 Now try the following:
 
-b) Write an **assertion** that checks that a funciton `isMultipleOfTen` returns `true` when called with the input `80`
+b) Write an **assertion** that checks that a function `isMultipleOfTen` returns `true` when called with the input `80`
 You can check out the [Jest documentation here](https://jestjs.io/docs/expect#matchers) to help you with this task.
