--- a/js1-week-2/3.md
+++ b/js1-week-2/3.md
@@ -1,4 +1,5 @@
 Describe the difference between a commit and a push
 
-
 {YOUR ANSWER HERE}
+
+A commit save the changes on the code on the local machine, and a push saves them on the remote repo for other people to see.
