--- a/js1-week-2/5.md
+++ b/js1-week-2/5.md
@@ -7,7 +7,10 @@ expect(sum(10,32)).toBe(42);
 
 a) Describe, in your own words, what the above assertion checks.
 
+It tests the function sum to check it will pass or not. it gets 2 parameter (10,32) and check of answer is 42 or not. 
 Now try the following:
 
 b) Write an **assertion** that checks that a funciton `isMultipleOfTen` returns `true` when called with the input `80`
 You can check out the [Jest documentation here](https://jestjs.io/docs/expect#matchers) to help you with this task.
+
+expect(isMultipleOfTen(80).toBe(true));
