--- a/js1-week-2/4.md
+++ b/js1-week-2/4.md
@@ -1,6 +1,6 @@
 Q: What is the difference between a fork and cloned repository?
 
 A: {YOUR ANSWER HERE}
-
+A fork repository will create an independent copy of the repo, whereas a clone repo create a linked copy that will keep synchronize with the parent repository. 
 
 Remember to commit and push when you're finished!
