--- a/js1-week-2/2.md
+++ b/js1-week-2/2.md
@@ -3,12 +3,18 @@
 In this task, you'll need to look at some code and predict what it does, **before running the program**
 This task will help you to develop your code reading skills.
 
-
 Look at the code in `2.js`: read it carefully and discuss it with your pair.
 What do you think the output will look like?
 If some parts of the code are unfamiliar, then look them up on MDN.
 Write your prediction below:
-
+initialised variable to 0
+use a while loop
+with condition less than 10
+we increment the count by 1
+we log to console an asterisk
+to the number of count per line.
+The while loop will stop when
+count is 10.
 {YOUR PREDICTION HERE}
 
 Once you've written your prediction, then commit your work. Now actually run `2.js` using node and write your answer below:
