--- a/js1-week-2/3.md
+++ b/js1-week-2/3.md
@@ -2,3 +2,5 @@ Describe the difference between a commit and a push
 
 
 {YOUR ANSWER HERE}
+
+commit saves your changes on your local repository and push uploads changes to your remote repository 
