--- a/js1-week-2/5.md
+++ b/js1-week-2/5.md
@@ -7,7 +7,11 @@ expect(sum(10,32)).toBe(42);
 
 a) Describe, in your own words, what the above assertion checks.
 
+the code will expect that function sum called with the arguement 10 and 32 will return the result 42
+
 Now try the following:
 
 b) Write an **assertion** that checks that a funciton `isMultipleOfTen` returns `true` when called with the input `80`
 You can check out the [Jest documentation here](https://jestjs.io/docs/expect#matchers) to help you with this task.
+
+expect(isMultipleOfTen(80)).toBe(true);
