--- a/js1-week-2/2.md
+++ b/js1-week-2/2.md
@@ -14,3 +14,5 @@ Write your prediction below:
 Once you've written your prediction, then commit your work. Now actually run `2.js` using node and write your answer below:
 
 {ACTUAL OBSERVED BEHAVIOUR}
+
+The console will print "*" incrementally by one each time, up tp 10 times 
