GLA6 collective answers to 1 and 2

--- a/js1-week-2/1.md
+++ b/js1-week-2/1.md
@@ -7,4 +7,10 @@ In this task, you'll need to look at some code in `1.js` and, firstly, predict w
 
 {YOUR PREDICTION HERE}
 
+## Glasgow Class 6
+
+* nothing will happen
+* not defined
+* currentYear is not a function
+
 Afterwards, you can execute the code in `1.js` to check your answer 📝
