--- a/js1-week-2/2.md
+++ b/js1-week-2/2.md
@@ -11,6 +11,10 @@ Write your prediction below:
 
 {YOUR PREDICTION HERE}
 
+Glasgow Class 6
+
+* Print `count` asterisks
+
 Once you've written your prediction, then commit your work. Now actually run `2.js` using node and write your answer below:
 
 {ACTUAL OBSERVED BEHAVIOUR}
