--- a/js1-week-2/0.md
+++ b/js1-week-2/0.md
@@ -29,7 +29,7 @@ c) Try to summarise the main difference between `logSum` and `calculateSum`
 
 result1 will evaluate to 42
 
-result2 will display the result in the console 
+result2 will show undefined as there is not a 'return' value  
 
 logSum shows the result in the console but doesn't return it, calculateSum evaluates and returns the result but doesn't log it in the console
 
